buildscript {
  ext {
    springBootVersion = '2.1.9.RELEASE'
  }
  repositories {
    mavenCentral()
  }
  dependencies {
    classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
    classpath 'gradle.plugin.com.palantir.gradle.docker:gradle-docker:0.20.1'
  }
}

plugins {
  id 'io.franzbecker.gradle-lombok' version '3.1.0'
  id 'com.github.psxpaul.execfork' version '0.1.9'
}

apply plugin: 'java'
apply plugin: 'eclipse'
apply plugin: 'org.springframework.boot'
apply plugin: 'io.spring.dependency-management'
apply plugin: 'checkstyle'
apply plugin: 'com.palantir.docker'

bootJar {
  baseName = 'alfred'
}

group = 'de.wasenweg'
sourceCompatibility = 11.0
targetCompatibility = 11.0

repositories {
  mavenCentral()
}

checkstyle {
  toolVersion '8.22'
}

task unpack(type: Copy) {
  dependsOn bootJar
  from(zipTree(tasks.bootJar.outputs.files.singleFile))
  into("build/dependency")
}

docker {
  name "${project.group}/${bootJar.baseName}"
  copySpec.from(tasks.unpack.outputs).into("dependency")
  buildArgs(['DEPENDENCY': "dependency"])
}

dependencies {
  compile 'org.springframework.boot:spring-boot-starter-web'
  compile 'org.springframework.boot:spring-boot-starter-data-rest'
  compile 'org.springframework.boot:spring-boot-starter-data-mongodb'
  compile 'org.springframework.boot:spring-boot-starter-security'
  compile 'org.springframework.boot:spring-boot-starter-webflux'

  compile 'com.google.api-client:google-api-client:1.29.2'
  compile 'org.springframework.security:spring-security-jwt:1.0.10.RELEASE'
  compile 'com.auth0:java-jwt:3.8.1'
  compile 'org.projectreactor:reactor-spring:1.0.1.RELEASE'
  compile 'org.projectlombok:lombok:1.18.8'
  compile 'org.webjars:webjars-locator-core'
  compile 'org.webjars:sockjs-client:1.0.2'
  compile 'com.google.guava:guava'

  testCompile 'org.glassfish.jersey.media:jersey-media-sse:2.27'
  testCompile 'org.springframework.boot:spring-boot-starter-test'
  testCompile 'de.flapdoodle.embed:de.flapdoodle.embed.mongo:2.2.0'
  testCompile 'io.projectreactor:reactor-test'
  testCompile 'org.springframework.security:spring-security-test'
  testCompile 'org.powermock:powermock-module-junit4:2.0.0'
  testCompile 'org.powermock:powermock-api-mockito2:2.0.0'
  testCompile 'org.mock-server:mockserver-netty:5.6.1'
  testCompile 'org.mock-server:mockserver-client-java:5.6.1'

  implementation(project(':ui'))
}
